renamed classes and introduced docker support for IRIS

--- a/cls/Util/LogQueueCounts.cls
+++ b/cls/Util/LogQueueCounts.cls
@@ -1,8 +1,7 @@
-Include Ensemble
-
+Include Iris
 Class Util.LogQueueCounts Extends %SYS.Task.Definition
 {
-
+	
 Property ProductionName As %String [ InitialExpression = "HIE.HIEPROD", Required ];
 
 Parameter TaskName = "Log Queue Counts";
